privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-pod
spec:
  containers:
  - name: privileged-pod
    image: ubuntu:latest
    command:
    - "/bin/bash"
    - "-c"
    - "sleep infinity"
    securityContext:
      privileged: true
    stdin: true
    tty: true
  restartPolicy: Never
